--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,17 +1,24 @@
-/* Estilos generales */
-/* Reset CSS */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+/* Header */
+.header {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
+.header ul {
+  list-style: none;
   padding: 0;
-  background-color: #000000;
-  color: #ffffff;
+}
+
+.header ul li {
+  display: inline;
+  margin: 0 10px;
+}
+
+.header ul li a {
+  color: white;
+  text-decoration: none;
 }
 
 /* Responsive Design */
@@ -31,3 +38,5 @@ body {
     margin-bottom: 5px; /* Espacio entre botones */
   }
 }
+
+  
