--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,9 +1,15 @@
 /* Header */
 .header {
+  position: fixed;
+  display:flex;
+  flex-direction: row;
+  top:0;
   background-color: #333;
+  z-index: 1000;
   color: white;
-  padding: 10px;
-  text-align: center;
+  padding: 10px 0;
+  justify-content:space-between;
+  align-items: center;
 }
 
 .header ul {
@@ -19,6 +25,11 @@
 .header ul li a {
   color: white;
   text-decoration: none;
+}
+
+
+main {
+  margin-top: 60px; /* Add padding to the top to prevent content overlap with fixed header */
 }
 
 /* Responsive Design */
